--- a/prototypeindex.html
+++ b/prototypeindex.html
@@ -163,7 +163,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><img src="images/AAAlogo.jpg" alt="AAA logo" height="42" width="42"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
