Building out the prototype page
trying out different layouts with CSS.

--- a/prototypeindex.html
+++ b/prototypeindex.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script>
-
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script> -->
 <html lang="en">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 <head>
   <title>~~AAA~~</title>
   <link rel="stylesheet" type="text/css" href="prototypeindex.css">
   <div class="headbar">
-    <img class="logoimage" src="images/AAA.png" alt="AAAlogo">
+    <a href="#default" class="logo"><img class="logoimage" src="images/AAA.png" alt="AAAlogo"></a>
+    <div class="headbar-right">
+      <a class="active" href="#home">Home</a>
+      <a href="#about">Upcoming</br> Events</a>
+      <a href="#contact">Welcome, Adam<i class="material-icons" style="font-size:48px;">account_circle</i></a>
+
+    </div>
   </div>
 </head>
 
-
 <body>
+  <div class="search-container">
+    <input type="text" class="searchtext" placeholder="Search.." name="search">
+    <!--<button type="submit"><i class="searchbutton">submit</i></button>-->
+  </div>
+
+  <div class="featured-container">
+    <div class="feature-left">
+      <iframe width="400" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1"></iframe>
+      <h1> First Feature Event </h1>
+      <p> Lorem Ipsum </p>
+    </div>
+    <div class="feature-center">
+      <img width="400" height="250" src="images/CopperLake.jpg" alt="AAAlogo">
+      <h1> Second Feature Event </h1>
+      <p> Lorem Ipsum </p>
+    </div>
+    <div class="feature-right">
+      <h1> Third Feature Event </h1>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id sapien lorem. Etiam feugiat, nulla ac hendrerit rhoncus, orci felis pellentesque nulla, a efficitur erat orci vel nisl. Sed at accumsan orci. Sed at lectus felis. Phasellus commodo mauris ligula, id finibus leo finibus in. Suspendisse potenti. Pellentesque ut magna nec urna pretium luctus. Vivamus pharetra viverra metus ac tempus. Etiam euismod massa ac aliquam eleifend. Aenean ornare suscipit dolor, eu egestas urna dapibus et. Integer a faucibus orci. Integer eu sem malesuada, accumsan ipsum quis, tincidunt arcu. Donec vitae lobortis ipsum.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id sapien lorem. Etiam feugiat, nulla ac hendrerit rhoncus, orci felis pellentesque nulla, a efficitur erat orci vel nisl. Lorem ipsum dolor sit amet.  </p>
+
+  </div>
+
 </body>
 </html>
