--- a/filterpage.html
+++ b/filterpage.html
@@ -1,8 +1,8 @@
+<html>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="filterpage.css";
 
 <head>
-<script type="text/javascript" href="filterpage.js"></script>
 </head>
 <body>
 <div class="header">
@@ -12,4 +12,6 @@
     <!-- <a id="SignIn" class="notactive" href="#SignIn" onclick="this.className='active'">Welcome back, Adam</a> -->
   </div>
 </div>
+<script type="text/javascript" href="filterpage.js"></script>
 </body>
+</html>
