--- a/filterpage.html
+++ b/filterpage.html
@@ -1,17 +1,20 @@
 <html>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="filterpage.css";
+<link rel="stylesheet" href="filterpage.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
 </head>
 <body>
-<div class="header">
-  <div class="header-right">
-    <a id="Home" class="active" href"#Home">Home</a>
-    <a id="SignIn" class="notactive" href="#SignIn" onclick="updateActive();">Welcome back, Adam</a>
-    <!-- <a id="SignIn" class="notactive" href="#SignIn" onclick="this.className='active'">Welcome back, Adam</a> -->
+<div class="topnav">
+  <div class="topnav-right" id=myTopnav>
+    <a id="Home" class="active" href"#Home" onclick="updateHomeNav();">Home</a>
+    <a id="SignIn" class="notactive" href="#SignIn" onclick="updateSignInNav();">Welcome back, Adam</a>
+    <a href="javascript:void(0);" class="icon" onclick="burgerMenuResponse()">
+    <i class="fa fa-bars"></i>
+  </a>
   </div>
 </div>
-<script type="text/javascript" href="filterpage.js"></script>
+<script type="text/javascript" src="filter.js"></script>
 </body>
 </html>
