Updates - removing old files

--- a/results.html
+++ b/results.html
@@ -30,16 +30,16 @@
     <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
-<h2> Distance </h2>
 <div class="bar-wrapper">
-  <input type="range" id="distance-bar" name="distance" min="0" max="15">
+  <h2> Distance </h2>
+  <input type="range" id="distance-bar" name="distance" min="0" max="15" value="0">
   <p> 0 miles </p>
   <p id="updatedmiles"> 15 miles </p>
   </div>
 <h2> Categories </h2>
 
 <label class="container">Elderly
-  <input type="checkbox" checked="checked">
+  <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
