made changes to css and html

--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-</body>
+
 
 <div class="spacingnav">
 </div>
@@ -66,11 +66,74 @@
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
-
 </div>
 
 <div class="searchresults" id="MainResults">
+  <div class="searchresults-top">
+    <div class="column-top">
+      <div class="card">
+        <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
+        <div class="content-container">
+          <h2>Event Name</h2>
+          <p class="title">Health and Medicine</p>
+          <p>Some Event Description...</p>
+          <p>Date: Some Date</p>
+          <p><button class="button">Learn More!</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="column-top">
+      <div class="card">
+        <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
+        <div class="content-container">
+          <h2>Event Name</h2>
+          <p class="title">Children and Youth</p>
+          <p>Some Event Description...</p>
+          <p>Date: Some Date</p>
+          <p><button class="button">Learn More!</button></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="searchresults-bottom">
+    <div class="column-bottom">
+    <div class="card">
+      <img src="images/matt-collamer-555626-unsplash.jpg" alt="Jane" class="images">
+      <div class="content-container">
+        <h2>Event Name</h2>
+        <p class="title">Homeless and Housing</p>
+        <p>Some Event Description...</p>
+        <p>Date: Some Date</p>
+        <p><button class="button">Learn More!</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column-bottom">
+    <div class="card">
+      <img src="images/ap-x-90-395258-unsplash.jpg" alt="Jane" class="images">
+      <div class="content-container">
+        <h2>Event Name</h2>
+        <p class="title">Seniors</p>
+        <p>Some Event Description...</p>
+        <p>Date: Some Date</p>
+        <p><button class="button">Learn More!</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column-bottom">
+    <div class="card">
+      <img src="images/nikhita-s-615116-unsplash.jpg" alt="Jane" class="images">
+      <div class="content-container">
+        <h2>Event Name</h2>
+        <p class="title">Education and Literacy</p>
+        <p>Some Event Description...</p>
+        <p>Date: Some Date</p>
+        <p><button class="button">Learn More!</button></p>
+      </div>
+    </div>
+  </div>
+  </div>
 </div>
 
-
+</body>
 </html>
