--- a/results.html
+++ b/results.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="results.css">
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="text/javascript" src="results.js"></script>
 <title> Results </title>
@@ -37,36 +39,53 @@
   </div>
 <h2> Categories </h2>
 
-<label class="container">Elderly
+<label class="container">Advocacy and Human Rights
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Medical
+<label class="container">Animals
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Childhood
+<label class="container">Children and Youth
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Homeless
+<label class="container">Disaster Relief
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Outdoor
+<label class="container">Education and Literacy
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Indoor
+<label class="container">Health and Medicine
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
+<label class="container">Homeless and Housing
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<label class="container">Seniors
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<label class="container">Veterans
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<button type="submit" class="UpdateResults" onclick="updateResults()">Update Results</button>
+<div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div>
 </div>
 
 <div class="searchresults" id="MainResults">
