Updating Deleted Code

--- a/results.html
+++ b/results.html
@@ -37,35 +37,53 @@
   </div>
 <h2> Categories </h2>
 
-<label class="container">Elderly
+<label class="container">Advocacy and Human Rights
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Medical
+<label class="container">Animals
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Childhood
+<label class="container">Children and Youth
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Homeless
+<label class="container">Disaster Relief
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Outdoor
+<label class="container">Education and Literacy
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
 
-<label class="container">Indoor
+<label class="container">Health and Medicine
   <input type="checkbox">
   <span class="checkmark"></span>
 </label>
+
+<label class="container">Homeless and Housing
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<label class="container">Seniors
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<label class="container">Veterans
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+
+<button type="submit" class="UpdateResults" onclick="updateResults()">Update Results</button>
+<div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div>
 </div>
 
 <div class="searchresults" id="MainResults">
