--- a/results.html
+++ b/results.html
@@ -86,11 +86,11 @@
   <span class="checkmark"></span>
 </label>
 
-<button type="submit" class="UpdateResults" onclick="updateResults()">Update Results</button>
-<div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div>
+<button id="UpdateButton" type="submit" class="UpdateResults" onclick="updateResults()">Update Results</button>
 </div>
 
 <div class="searchresults" id="MainResults">
+  <div id="loading-blank" class="loading-child"><div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div> </div>
   <div class="searchresults-top">
     <div class="column-top">
       <div class="card">
