--- a/results.html
+++ b/results.html
@@ -20,7 +20,7 @@
     <a id="SignIn" href="#signin" class="notactive" onclick="updateSignInNav();" >Sign In</a>
     <!-- <a id="SignIn" href="#signin" class="material-icons">account_circle</a> -->
     <a id="About" href="#about" class="notactive" onclick="updateAboutNav()">About</a>
-    <a id="Home" href="#home" class="active" onclick="updateHomeNav();" >Home</a>
+    <a id="Home" href="home.html" class="active" onclick="updateHomeNav();" >Home</a>
     <a href="javascript:void(0);" class="icon" onclick="openBurgerMenu()">
       <i class="fa fa-bars"></i>
     </a>
@@ -96,6 +96,9 @@
     <div class="column-top">
       <div class="card" id="TomorrowEventCard">
         <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
+        <div class="led-box">
+          <div class="led-red"></div>
+        </div>
         <div class="content-container">
           <h2>Event Name</h2>
           <p class="title" id="tag1">Health and Medicine</p>
