moves to filter page

--- a/homeb.html
+++ b/homeb.html
@@ -48,7 +48,7 @@
 <div class="mainsearch">
   <h1> Your service journey starts here </h1>
 <div class="searchinfilterhome">
-  <input class="searchinfilterhome" id = "search-bar-filter" type="text" placeholder="Search.." name="search" onchange="results.html">
+  <input class="searchinfilterhome" id = "search-bar-filter" type="text" placeholder="Search.." name="search" onchange="window.location.href='results.html';">
   <button type="submit"><i class="fa fa-search" onclick="window.location.href='results.html';"></i></button>
 </div>
 </div>
