--- a/results.html
+++ b/results.html
@@ -14,13 +14,13 @@
 <body>
   <div class="navbar" id="TopNav">
     <c><img class="logoimage" src="images/AAAnewlogo.png" alt="Italian Trulli" onclick="updateHomeNav()"></c>
-    <b>    it's your turn to take action...</b>
+  
 
     <!-- <a href="#home" class="notactive">LOGO</a>-->
     <a id="SignIn" href="#signin" class="notactive" onclick="updateSignInNav();" >Sign In</a>
     <!-- <a id="SignIn" href="#signin" class="material-icons">account_circle</a> -->
     <a id="About" href="#about" class="notactive" onclick="updateAboutNav()">About</a>
-    <a id="Home" href="home.html" class="active" onclick="updateHomeNav();" >Home</a>
+    <a id="Home" href="homeb.html" class="active" onclick="updateHomeNav();" >Home</a>
     <a href="javascript:void(0);" class="icon" onclick="openBurgerMenu()">
       <i class="fa fa-bars"></i>
     </a>
