--- a/homeb.html
+++ b/homeb.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="results.js"></script>
 
@@ -60,8 +61,19 @@
 </div>
 
 
+
 <section id="bottomresults" class="bottomlevel">
+
+
   <div class="featurebar">
+    <h3> Explore nearby opportunities </h3>
+    <div class="homebuttonarray">
+      <button class="regularbut" onclick="window.location.href='results.html';"></button>
+      <button class="regularbut" onclick="window.location.href='results.html';"></button>
+      <button class="regularbut" onclick="window.location.href='results.html';"></button>
+      <button class="regularbutend" onclick="window.location.href='results.html';"></button>
+    </div>
+    <h3> Featured opportunities  </h3>
   <div class="searchresults-bottom">
     <div class="column-bottom">
     <div class="card">
