--- a/homeb.html
+++ b/homeb.html
@@ -66,14 +66,22 @@
 
 
   <div class="featurebar">
-    <h3> Explore nearby opportunities </h3>
+    <h3> Popular categories </h3>
     <div class="homebuttonarray">
-      <button class="regularbut" onclick="window.location.href='results.html';"></button>
-      <button class="regularbut" onclick="window.location.href='results.html';"></button>
-      <button class="regularbut" onclick="window.location.href='results.html';"></button>
-      <button class="regularbutend" onclick="window.location.href='results.html';"></button>
+      <button class="regularbutfirst" onclick="window.location.href='results.html';">
+        <img src="cat.png" class="smallbuttonimage">Animals</button>
+
+      <button class="regularbut" onclick="window.location.href='results.html';">
+        <img src="medicine.png" class="smallbuttonimage">
+        Health</button>
+      <button class="regularbut" onclick="window.location.href='results.html';">
+        <img src="tent.png" class="smallbuttonimage">
+        Homeless</button>
+      <button class="regularbutend" onclick="window.location.href='results.html';">
+        <img src="people.png" class="smallbuttonimage">
+        Seniors</button>
     </div>
-    <h3> Featured opportunities  </h3>
+    <h3> Explore nearby opportunities  </h3>
   <div class="searchresults-bottom">
     <div class="column-bottom">
     <div class="card">
