--- a/results.html
+++ b/results.html
@@ -43,12 +43,10 @@
 <h2> When </h2>
 
 <div class="time-button-wrapper">
-  
-  <button class="time-button" type="submit" onclick="updateResults()">3 days </button>
 
-  <button class="time-button" type="submit" onclick="updateResults()">1 week </button>
-
-  <button class="time-button" type="submit" onclick="updateResults()">1 month</button>
+  <button class="time-button" id = "Thisweek" type="submit" onclick="updateThisweek()">This week </button>
+  <button class="time-button" id = "Thismonth" type="submit" onclick="updateThismonth()">This month </button>
+  <button class="time-button" id = "Nextmonth" type="submit" onclick="updateNextmonth()">Next month</button>
 </div>
 
 <h2> Categories </h2>
