--- a/results.html
+++ b/results.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 <script type="text/javascript" src="results.js"></script>
 
 <title> Results </title>
@@ -13,7 +14,7 @@
 
 <body>
   <div class="navbar" id="TopNav">
-    <c><img class="logoimage" src="images/AAAnewlogo.png" alt="Italian Trulli" onclick="updateHomeNav()"></c>
+    <c><img class="logoimage" src="AAAbrownlogo.png" alt="Italian Trulli" onclick="updateHomeNav()"></c>
 
 
     <!-- <a href="#home" class="notactive">LOGO</a>-->
@@ -40,7 +41,7 @@
   <p id="distance-miles">0 miles</p>
   </div>
 
-<h2> When </h2>
+<h2 id = "Whenlabel"> When </h2>
 
 <div class="time-button-wrapper">
 
