--- a/results.html
+++ b/results.html
@@ -111,19 +111,21 @@
           <h2>Event Name</h2>
           <p class="title" id="tag1">Health and Medicine</p>
           <p>Some Event Description...</p>
-          <p class="TomorrowEvent">Date: Tomorrow at 6pm!</p>
+          <p class="TomorrowEventbold">Date: </p>
+          <p class="TomorrowEvent">Tomorrow at 6pm!</p>
           <p><button class="button">Learn More!</button></p>
         </div>
       </div>
     </div>
     <div class="column-top">
-      <div class="card">
+      <div class="card" id="ThisWeekEventCard">
         <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
         <div class="content-container">
           <h2>Event Name</h2>
           <p class="title" id="tag2">Children and Youth</p>
           <p>Some Event Description...</p>
-          <p class="ThisWeekEvent">Date: This Thursday at 1pm until 3pm</p>
+          <p class="ThisWeekEventbold">Date: <p>
+            <p class="ThisWeekEvent">This Thursday from 1pm - 3pm</p>
           <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()">Learn More!</button></p>
         </div>
       </div>
