--- a/homeb.html
+++ b/homeb.html
@@ -50,7 +50,7 @@
 <div class="mainsearch">
   <h1> Your service journey starts here </h1>
 <div class="searchinfilterhome">
-  <input class="searchinfilterhome" id = "search-bar-filter" type="text" placeholder="Search.." name="search" onchange="window.location.href='results.html';">
+  <input class="searchinfilterhome" id = "search-bar-filter" type="text" placeholder="Enter ZIP Code..." name="search" onchange="window.location.href='results.html';">
   <button type="submit"><i class="fa fa-search" onclick="window.location.href='results.html';"></i></button>
 </div>
 </div>
@@ -91,7 +91,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag3">Homeless and Housing</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button" href="results.html">Learn More!</button></p>
       </div>
     </div>
@@ -103,7 +103,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag4">Seniors</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -115,7 +115,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag5">Education and Literacy</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
