--- a/results.html
+++ b/results.html
@@ -113,8 +113,8 @@
           <h2 class="Event-Title">Event Name</h2>
           <p class="Event-Category" id="tag1">Health and Medicine</p>
           <p class="Event-Description">Some Event Description...</p>
-          <p class="TomorrowEventbold">Date: </p>
-          <p class="TomorrowEvent">Tomorrow at 6pm!</p>
+          <p class="Event-Date TomorrowEventbold">Date: </p>
+          <p class="Event-Date TomorrowEvent">Tomorrow at 6pm!</p>
           <p><button class="button">Learn More!</button></p>
         </div>
       </div>
@@ -126,8 +126,8 @@
           <h2 class="Event-Title">Event Name</h2>
           <p class="Event-Category" id="tag2">Children and Youth</p>
           <p class="Event-Description">Some Event Description...</p>
-          <p class="ThisWeekEventbold">Date: <p>
-          <p class="ThisWeekEvent">This Thursday from 1pm - 3pm</p>
+          <p class="Event-Date ThisWeekEventbold">Date: <p>
+          <p class="Event-Date ThisWeekEvent">This Thursday from 1pm - 3pm</p>
           <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()">Learn More!</button></p>
         </div>
       </div>
@@ -141,7 +141,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag3">Homeless and Housing</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -153,7 +153,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag4">Seniors</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -165,7 +165,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id="tag5">Education and Literacy</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -179,7 +179,7 @@
           <h2 class="Event-Title">Event Name</h2>
           <p class="Event-Category" id="tag6">Health and Medicine</p>
           <p class="Event-Description">Some Event Description...</p>
-          <p>Date: Some Date</p>
+          <p class="Event-Date">Date: Some Date</p>
           <p><button class="button">Learn More!</button></p>
         </div>
       </div>
@@ -191,7 +191,7 @@
           <h2 class="Event-Title">Event Name</h2>
           <p class="Event-Category" id = "tag7">Children and Youth</p>
           <p class="Event-Description">Some Event Description...</p>
-          <p>Date: Some Date</p>
+          <p class="Event-Date">Date: Some Date</p>
           <p><button class="button">Learn More!</button></p>
         </div>
       </div>
@@ -205,7 +205,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id = "tag8">Homeless and Housing</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -217,7 +217,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id = "tag9">Seniors</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
@@ -229,7 +229,7 @@
         <h2 class="Event-Title">Event Name</h2>
         <p class="Event-Category" id = "tag10">Education and Literacy</p>
         <p class="Event-Description">Some Event Description...</p>
-        <p>Date: Some Date</p>
+        <p class="Event-Date">Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
     </div>
